--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "whiteboard-react": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
