--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.1",
     "web-vitals": "^2.1.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
     "whiteboard-react": "^1.0.0"
   },
   "scripts": {
