--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "fabric": "^5.2.4",
+    "firebase": "^9.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
