--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "bootstrap": "^5.2.1",
     "fabric": "^5.2.4",
     "firebase": "^9.9.4",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-minimal-pie-chart": "^8.3.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
