--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,30 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.2",
-    "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.3.0",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.2.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
+    "@reduxjs/toolkit": "^1.9.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "fabric": "^5.2.4",
-    "firebase": "^9.9.4",
+    "firebase": "^9.14.0",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-minimal-pie-chart": "^8.3.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
+    "react-minimal-pie-chart": "^8.4.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
-    "socket.io-client": "^4.4.1",
-    "web-vitals": "^2.1.4",
-    "webpack": "^5.74.0",
+    "redux-thunk": "^2.4.2",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.5.3",
+    "web-vitals": "^3.0.4",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "whiteboard-react": "^1.0.0"
   },
