--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,6 @@ API_PORT=1250
 
 MONGO_URI=mongodb+srv://dat:1234dat6789@cluster0.vzcpzi5.mongodb.net/?retryWrites=true&w=majority
 
-
+MONGO_LOCAL = mongodb://127.0.0.1:27017/webRTC
 
 TOKEN_KEY = tokenNayManhVL
